Transition to mdx, update main image

--- a/src/pages/posts/blog-final-frontier.mdx
+++ b/src/pages/posts/blog-final-frontier.mdx
@@ -5,7 +5,7 @@ pubDate: 2021-08-26
 description: Seeking progression while climbing in Yosemite National Park
 author: Amity Warme
 image: 
-    url: "../src/images/posts/finalfrontier1.jpg"
+    index: 1
     alt: Amity on Final Frontier
     caption: Amity on her free ascent of Final Frontier
     cred: Will Sharp
