--- a/src/pages/posts/blog-fuel-your-body.mdx
+++ b/src/pages/posts/blog-fuel-your-body.mdx
@@ -5,7 +5,7 @@ pubDate: 2022-07-08
 description: Underfueling hinders performance and negatively impacts health 
 author: Amity Warme
 image: 
-    url: "../src/images/posts/fuel.jpg"
+    index: 2
     alt: Amity on Cosmic Debris, Yosemite
     caption: Amity on Cosmic Debris (5.13b) in Yosemite
     cred: Max Buschini
