--- a/src/pages/posts/blog-worth-it.mdx
+++ b/src/pages/posts/blog-worth-it.mdx
@@ -5,7 +5,7 @@ pubDate: 2023-02-03
 description: A glimpse into climbing The Honeymoon is Over in RMNP
 author: Amity Warme
 image:
-    url: '../src/images/gallery/Shaffer_Taylor-17.Lite.jpg' 
+    index: 5 
     alt: 'Amity climbing in RMNP'
     caption: Amity on the first ascent of Barnacle Scars (5.13) in RMNP.
     cred: 'Taylor Shaffer'
