--- a/src/pages/posts/blog-attempt-moonlight-buttress.mdx
+++ b/src/pages/posts/blog-attempt-moonlight-buttress.mdx
@@ -5,7 +5,7 @@ pubDate: 2021-03-23
 description: "A recap of my time on the renown sandstone splitter"
 author: Amity Warme
 image: 
-  url: "../src/images/gallery/rabbit.jpg"
+  index: 0
   alt: Amity on Silly Rabbit (5.12-)
   caption: Amity on Silly Rabbit (5.12-) in Indian Creek, UT
   cred: Felipe Nordenflycht
