--- a/src/pages/posts/blog-nutrition-multi-pitch.mdx
+++ b/src/pages/posts/blog-nutrition-multi-pitch.mdx
@@ -5,7 +5,7 @@ pubDate: 2022-04-13
 description: Insight and ideas to fuel your big climbing days 
 author: Amity Warme
 image: 
-    url: "../src/images/gallery/gate.jpg"
+    index: 3
     alt: Amity on Golden Gate, El Cap
     caption: Amity on Golden Gate (5.13a) on El Capitan
     cred: Felipe Nordenflycht
