--- a/src/pages/posts/blog-underfueling.mdx
+++ b/src/pages/posts/blog-underfueling.mdx
@@ -5,7 +5,7 @@ pubDate: 2020-11-17
 description: "Learn about Low Energy Availability and how to properly fuel for you adventure"
 author: Amity Warme
 image: 
-  url: "../src/images/gallery/JohnnyLat.jpg"
+  index: 4
   alt: Amity climbing in Turkey Rocks
   caption: Amity on Johnny Lat (5.12c) in Turkey Rocks, CO
   cred: Adam Pawlikiewicz
