Transition to mdx, update image

--- a/src/pages/posts/media-climbing-feature.mdx
+++ b/src/pages/posts/media-climbing-feature.mdx
@@ -5,7 +5,7 @@ pubDate: 2022-08-30
 description: “Amity doesn’t seem to take rest days. ... That's probably the biggest influence on her impressive ticklist."
 author: Chloe Anderson
 image: 
-  url: "../src/images/gallery/Amity_Goldengate.Lite.jpg"
+  index: 6
   alt: Amity on the A5 Traverse
   caption: Amity on the A5 Traverse
   cred: Felipe Nordenflycht
