--- a/src/pages/posts/media-gripped-friad.mdx
+++ b/src/pages/posts/media-gripped-friad.mdx
@@ -5,7 +5,7 @@ pubDate: 2022-04-23
 description: "Team-free: unsupported, unstashed, unrehearsed..."
 author: null
 image: 
-  url: null
+  index: null
   alt: null
 origin: 
   name: 'Gripped'
