--- a/src/pages/posts/media-youtube-golden.mdx
+++ b/src/pages/posts/media-youtube-golden.mdx
@@ -5,7 +5,7 @@ pubDate: 2021-06-03
 description: '"We completed the climb in five and a half days from 5/24/21 to 5/29/21. Each of us sent every pitch free."'
 author: null
 image: 
-  url: null
+  index: null
   alt: null
 origin: 
   name: 'Tyler Karow'
