--- a/src/pages/posts/media-daily-honeymoon.mdx
+++ b/src/pages/posts/media-daily-honeymoon.mdx
@@ -5,7 +5,7 @@ pubDate: 2022-09-28
 description: "Three ladies test their mettle on the Diamond..."
 author: Chris Weidner
 image: 
-  url: null
+  index: null
   alt: null
 origin: 
   name: 'Daily Camera'
