Transition podcast blogs to mdx, update image

--- a/src/pages/posts/podcast-enormocast.mdx
+++ b/src/pages/posts/podcast-enormocast.mdx
@@ -5,8 +5,8 @@ pubDate: 2022-12-16
 description: "A conversation with Chris about life, climbing, and more"
 author: false
 image: 
-  url: "../src/images/posts/enormo.jpg"
-  alt: "Amity in action"
+  index: 7
+  alt: Amity in action
   cred: 'Felipe Nordenflycht, Scott Eubank, Tempei Takeuchi'
 origin: null
 intel:
