--- a/src/pages/posts/podcast-muir.mdx
+++ b/src/pages/posts/podcast-muir.mdx
@@ -5,7 +5,7 @@ pubDate: 2021-07-10
 description: "A conversation with Doc about climbing big walls and more"
 author: false
 image: 
-  url: null
+  index: null
   alt: null
 origin: null
 intel:
