--- a/src/pages/posts/podcast-nugget.mdx
+++ b/src/pages/posts/podcast-nugget.mdx
@@ -5,8 +5,8 @@ pubDate: 2022-01-31
 description: "A conversation with Steven about life, climbing, and more"
 author: false
 image: 
-  url: "https://images.squarespace-cdn.com/content/v1/5e12721e9cacc8033cd889f6/34eeccbb-34c1-4c97-ac10-ea96e2fdcfd4/--Episode+Cover.png"
-  alt: "Amity cover image"
+  index: 8
+  alt: Amity cover image
 origin: null
 intel:
   name: The Nugget Climbing Podcast
