Update recipe blogs to mdx, update image

--- a/src/pages/posts/recipe-banana-bread-granola.mdx
+++ b/src/pages/posts/recipe-banana-bread-granola.mdx
@@ -5,8 +5,8 @@ pubDate: 2022-07-21
 description: "A nutritious snack to fuel your next adventure"
 author: Amity Warme
 image: 
-  url: "../../src/images/posts/bananabread.png"
-  alt: "Bananabread Granola"
+  index: 9
+  alt: Bananabread Granola
 origin: 
   name: 'Enduro Bites'
   url: "https://endurobites.com/blogs/recipes/banana-bread-granola-recipe"
