--- a/src/pages/posts/recipe-blackberry-muffins.mdx
+++ b/src/pages/posts/recipe-blackberry-muffins.mdx
@@ -5,8 +5,8 @@ pubDate: 2021-09-19
 description: "Enjoy delicious and protein-packed blackberry muffins"
 author: Amity Warme
 image: 
-  url: "../../src/images/posts/blackberry.png"
-  alt: "Northwest Blackberry Muffins"
+  index: 10
+  alt: Northwest Blackberry Muffins
 origin: 
   name: 'Enduro Bites'
   url: "https://endurobites.com/blogs/recipes/northwest-blackberry-muffins"
