--- a/src/pages/posts/recipe-chocolate-pudding.mdx
+++ b/src/pages/posts/recipe-chocolate-pudding.mdx
@@ -5,8 +5,8 @@ pubDate: 2022-03-07
 description: "Enjoy a nutritious, date-sweetened chocolate pudding"
 author: Amity Warme
 image: 
-  url: "../src/images/posts/pudding.png"
-  alt: "Chocolate Chia Protein Pudding"
+  index: 11
+  alt: Chocolate Chia Protein Pudding
 origin: 
   name: 'Enduro Bites'
   url: "https://endurobites.com/blogs/recipes/chocolate-chia-protein-pudding-recipe"
