--- a/src/pages/posts/recipe-pumpkin-buckwheat-gingerbread.mdx
+++ b/src/pages/posts/recipe-pumpkin-buckwheat-gingerbread.mdx
@@ -5,8 +5,8 @@ pubDate: 2022-08-08
 description: "A delicious gluten-free, dairy-free, low-sugar snack"
 author: Amity Warme
 image: 
-  url: "../../src/images/posts/pumpkin.png"
-  alt: "Pumpkin Buckwheat Gingerbread"
+  index: 13
+  alt: Pumpkin Buckwheat Gingerbread
 origin: 
   name: 'Enduro Bites'
   url: "https://endurobites.com/blogs/recipes/pumpkin-buckwheat-gingerbread-recipe"
