--- a/src/pages/posts/recipe-lemon-zucchini-muffins.mdx
+++ b/src/pages/posts/recipe-lemon-zucchini-muffins.mdx
@@ -5,8 +5,8 @@ pubDate: 2021-07-13
 description: "An on-the-go fuel to energize on pre-dawn adventures"
 author: Amity Warme
 image: 
-  url: "../../src/images/posts/zucchini.png"
-  alt: "Lemon Zucchini Muffins"
+  index: 12
+  alt: Lemon Zucchini Muffins
 origin: 
   name: 'Enduro Bites'
   url: "https://endurobites.com/blogs/recipes/lemon-zucchini-muffin-recipe-pre-dawn-adventure-fuel"
