Add struggle podcast, update frontier images

--- a/src/pages/posts/blog-final-frontier.mdx
+++ b/src/pages/posts/blog-final-frontier.mdx
@@ -16,17 +16,20 @@ origin:
 tags: ["climbing", "Yosemite", "reflections", "blog"]
 type: blog
 ---
+import stem from "../../images/posts/finalfrontier2a.jpg"
+import layback from "../../images/posts/finalfrontier2.jpg"
+import final from "../../images/posts/finalfrontier3.jpg"
 
 The alarm goes off. It’s still dark outside, but as I awaken, my brain latches on the objective of the day and I quickly perk up. Coffee, breakfast, drive to the trailhead, grab the pack of gear I prepped last night, then my partner and I start the uphill approach to the base of the imposing wall above. Soft dawn light illuminates the forest around us and my psych builds as I hop from boulder to boulder toward Fifi Buttress, just one of the many impressive granite walls that make up Yosemite Valley. Eventually, we emerge from the trees and the route we plan to climb today looms steeply ahead. I organize the gear on my harness, fist bump my partner, and launch upward.
 
 The Final Frontier ascends nearly 1000 feet of steep rock and is punctuated by three crux pitches that clock in at 5.12d, 5.13a, and 5.13a/b. Two years ago, during my only previous visit to Yosemite, I climbed a couple of the easier neighboring routes. At that time, I remember thinking to myself how rad it would be to someday feel strong enough to climb The Final Frontier. To the younger me, this route seemed far beyond my ability. It felt like a distant goal and I wasn’t even sure how to go about making it attainable. Today though, I feel confident and capable because over the past years, I have dedicated considerable time to honing my skills and improving as a climber.
 
-![Amity stemming the initial crux pitch](../src/images/posts/finalfrontier2a.jpg)
+<img src={stem} alt="Amity stemming the initial crux pitch" />
 
 We arrive at the first crux pitch, a thin corner requiring technical stemming up the smooth walls on either side. I fall once and self-doubt creeps in. Maybe I’m not as capable as I thought. I push the negativity aside and try again. The moves feel insecure, but I’ve practiced for this and I manage to dispatch the pitch cleanly. Crux number two is a short, powerful boulder problem. Not a strong suit of mine, but I’ve worked hard to increase my bouldering ability. It takes me two tries, but I send this pitch as well. I don’t let myself celebrate yet as the third crux is still ahead. I know it will test me, but I dig deep and remember the time and effort I have dedicated to preparing myself for this type of challenge. Again, it takes me two attempts, but I complete the pitch without falling and my partner and I rocket up the remainder of the climb. 
 
-![Amity laying back higher on the initial crux pitch](../src/images/posts/finalfrontier2.jpg)
+<img src={layback} alt="Amity laying back higher on the initial crux pitch" />
 
 As I stand on the summit, I reflect on what this route signifies to me. The shift in perception – from a route once seeming like an unattainable goal to now becoming a reality – was facilitated by my commitment to progression. I refuse to settle for less than my best. I strive for excellence and perpetually seek improvement, both as a climber and as a person. All too often, we limit ourselves. It’s scary to dream big. It’s easier to live in our comfort zones, only attempting what we know is within reach. I share this story to encourage you to step outside your comfort zone and keep seeking progression. Don’t limit yourself to the goals you already know are possible. Instead, challenge yourself. Accept the discomfort of pursuing a long shot endeavor. Goals of this nature require more effort, both physically and mentally, but the work is worth the reward.
 
-![Amity nearing the summit of Final Frontier](../src/images/posts/finalfrontier3.jpg)
+<img src={final} alt="Amity nearing the summit of Final Frontier" />
