Update images in blog body

--- a/src/pages/posts/blog-attempt-moonlight-buttress.mdx
+++ b/src/pages/posts/blog-attempt-moonlight-buttress.mdx
@@ -16,6 +16,8 @@ origin:
 tags: ["climbing", "Zion", "reflections", "blog"]
 type: blog
 ---
+import traverse from "../../images/posts/moonlight2.jpg"
+import smile from "../src/images/posts/moonlight1.jpg"
 
 I have dreamt about trying to onsight Moonlight Buttress for years. This iconic route ascends a prominent prow of immaculate sandstone for over 1000 feet of finger crack delight. Featuring flawless rock, thrilling exposure, and jaw-dropping scenery, this sustained journey breaks down into 10 pitches. The first four provide a friendly warm-up: moderates, with one slightly spicy 5.11 traverse to keep you on your toes. The next six pitches are the business. Each offers a unique test of one’s crack climbing proficiency, so depending on height, finger size, and level of endurance, the “crux” of this line varies widely by climber. The magnitude of this goal, with its physical and mental challenges, has long inspired and motivated me.
 
@@ -35,7 +37,7 @@ Driving into Zion from our campsite gave me time to sip coffee, admire the sunri
 
 A cold river crossing and a short approach brought us to the base of the climb. Connor flaked out the rope while I racked up gear on my harness. I slipped on my shoes, thanked Connor for his support, and took off right as the sunlight crept down to meet us.  
 
-![Amity on an early traversing pitch](../src/images/posts/moonlight2.jpg)
+<img src={traverse} alt="Amity on an early traversing pitch" />
 
 I settled into my groove as we blasted up the first four pitches and established ourselves on the Rocker Blocker – a massive, detached block that is bolted to the wall behind it, but still rocks gently beneath your feet. We paused for a quick snack and drink, the steep headwall looming above us.  
 
@@ -65,7 +67,7 @@ As a slightly harder version of the previous pitch, I expect that I will have to
 
 Staring upward at the final stretch of climbing, the accumulated fatigue sweeps over me. My arms are heavy, the buoyancy of the potential onsight is no longer beneath me. Cognitively, I know the moves are not that difficult but mentally, I am discouraged. Physically, I am close to depleted. I lurch desperately for a jug and vigorously shake my arms, one after the other, attempting to loosen the throbbing pump. It doesn’t matter anymore, I don’t have to try this hard, I already failed. No! I’m still giving my best effort, that’s what is important to me. I am going to dig deep, all the way through. Finally, I commit to the next sequence, punch through it, and dance my way to the very top of this journey.
 
-![Amity still smiling](../src/images/posts/moonlight1.jpg)
+<img src={smile} alt="Amity still smiling" />
 
 ### Defining Success
 
