Update worth it blog images

--- a/src/pages/posts/blog-worth-it.mdx
+++ b/src/pages/posts/blog-worth-it.mdx
@@ -15,6 +15,9 @@ origin:
 tags: ["alpine", "climbing", "RMNP", "Honeymoon", "reflections", "blog"]
 type: blog
 ---
+import barnacle from "../../images/posts/worthit1.jpg"
+import barn1 from "../../images/posts/worthit2.jpg"
+import honey from "../../images/posts/worthit3.jpg"
   
 Lightning sears the sky directly above us and a crash of thunder immediately follows. Dark clouds unleash a torrent of hail that stings our faces and blurs our vision of the wall looming over us. I ascend wet ropes through the storm - cold, drenched, scared for my life, and questioning why I chose to pursue another committing alpine objective.  
   
@@ -30,7 +33,7 @@ Fast-forward two days. I found out two ladies were planning to go check out the 
   
 A typical session on The Honeymoon is Over would involve packing and prepping the night before, waking up at 2am, and driving an hour to the trailhead to be hiking by 3:30am. After hiking the 6.5 miles to the top of Longs Peak, I’d set up a static rope to rappel down the upper part of the route and start climbing around 7:30am. I would practice the crux pitches on microtraxion, trying to get in a couple laps in order to memorize the intricate movement and build the required fitness to climb multiple difficult pitches at altitude. I would be back on top no later than 2pm in order to pack up the rope and my gear and scramble down before the typical onslaught of lightning, thunder, and hail that blew in most afternoons.
 
-![Amity stemming the crux of Barnacle Scars (5.13) on Ship's Prow](../src/images/posts/worthit1.jpg)
+<img src={barnacle} alt="Amity stemming the crux of Barnacle Scars on Ship's Prow" />
   
 Additional challenges arose throughout the process of projecting The Honeymoon is Over. The route frequently seeps from storms, leaving some degree of wetness to contend with. Of the nine days I spent on the route, I never climbed on it dry. Even in good conditions, it felt like the crux pitches presented many places where I could fall. Sending the whole route would require aligning a day of peak performance with a day of good enough weather. The thought of that felt unlikely and overwhelming. Yet, on a deeper level, I crave the kind of challenge that pushes me to the brink. I need to explore my mental and physical limits in order to feel truly alive. The greater the struggle, the more it draws me in. I had committed to the goal and knew all along that I would do my best to see it through, despite the discomfort and inadequacy I often felt in the midst of the process.  
   
@@ -38,7 +41,7 @@ As the end of the season drew near, I knew it was time for my first redpoint att
   
 The 5.13c crux pitch - a 35 meter, ultra technical offset seam that protects mostly with small cams and wires - lay ahead. Really insecure climbing, with a hard move right at the end. Of course, this pitch was also wet. Not only was the rock wet, but as I climbed, I was being dripped on from above. My hands, feet, and chalk bag were getting showered by the runoff. Every move felt desperate. But I wouldn’t let go. I wouldn’t give up. I fought my way to the anchor marking the end of the pitch. I made it without falling, but I had been holding on so tightly - overgripping - the entire time that I felt spent but still had three hard pitches to go. 
 
-![Amity on Barnacle Scars (5.13) on Ship's Prow](../src/images/posts/worthit2.jpg)
+<img src={barn1} alt="Amity on Barnacle Scars (5.13) on Ship's Prow" />
   
 As Connor ascended the pitch below me, I attempted to calm my body and mind. I had just sent the crux in horrendous conditions, but I was far from finishing the route. I needed to find a headspace that would enable me to continue performing at a high level despite the adversity, fatigue, and cold.  
   
@@ -50,4 +53,4 @@ After battling wetness, hail, and hard climbing all day, I felt utterly exhauste
   
 Sitting on the summit, I reflected on what this acheivement meant to me and what it cost me. Was the struggle worth it, only to get hurt in the end? Yes. The injury setback hit me hard, but I didn’t know I was going to get hurt and I wouldn’t have been happy with myself if I gave less than 100% effort. And I learned plenty along the way - about myself and about the process of tackling a big objective. I realized how deeply I crave a challenge that tests my mental and physical limits. I need to risk failure in order to discover what I am capable of. The uncertainty of whether or not a lofty goal is within reach or just beyond can feel daunting. The work leading up to the accomplishment is usually not easy or comfortable in the moment. Throughout the process, as I was cold, wet, scared, and intimidated, I had to hold the end goal in sight and celebrate each small stepping stone along the way. All along, the goal felt ambitious. Far-fetched. But I wouldn’t let go. I wouldn’t give up.  
 
-![Amity after sending The Honeymoon is Over (5.13c) on The Diamond](../src/images/posts/worthit3.jpg)
+<img src={honey} alt="Amity after sending The Honeymoon is Over" />
