Typo in photo location

--- a/src/pages/posts/blog-attempt-moonlight-buttress.mdx
+++ b/src/pages/posts/blog-attempt-moonlight-buttress.mdx
@@ -17,7 +17,7 @@ tags: ["climbing", "Zion", "reflections", "blog"]
 type: blog
 ---
 import traverse from "../../images/posts/moonlight2.jpg"
-import smile from "../src/images/posts/moonlight1.jpg"
+import smile from "../../images/posts/moonlight1.jpg"
 
 I have dreamt about trying to onsight Moonlight Buttress for years. This iconic route ascends a prominent prow of immaculate sandstone for over 1000 feet of finger crack delight. Featuring flawless rock, thrilling exposure, and jaw-dropping scenery, this sustained journey breaks down into 10 pitches. The first four provide a friendly warm-up: moderates, with one slightly spicy 5.11 traverse to keep you on your toes. The next six pitches are the business. Each offers a unique test of one’s crack climbing proficiency, so depending on height, finger size, and level of endurance, the “crux” of this line varies widely by climber. The magnitude of this goal, with its physical and mental challenges, has long inspired and motivated me.
 
