Update recipe links

--- a/src/pages/posts/recipe-banana-bread-granola.mdx
+++ b/src/pages/posts/recipe-banana-bread-granola.mdx
@@ -23,7 +23,7 @@ type: recipe
   * 5 cups old fashioned oats
   * 2 teaspoons cinnamon
   * ½ teaspoon sea salt
-  * 2 scoops Enduro Bites Vanilla [Recovery Protein](https://enduro-bites.myshopify.com/products/recovery-protein-by-enduro-bites) 
+  * 2 scoops Enduro Bites Vanilla <a href="https://enduro-bites.myshopify.com/products/recovery-protein-by-enduro-bites" target="_blank" rel="noreferrer">Recovery Protein</a>
 
 ### Instructions
 
