--- a/src/pages/posts/recipe-blackberry-muffins.mdx
+++ b/src/pages/posts/recipe-blackberry-muffins.mdx
@@ -29,7 +29,7 @@ type: recipe
   * 1 tsp sea salt
   * 2 tsp baking powder
   * ½ tsp baking soda
-  * 2 scoops Enduro Bites Vanilla [Recovery Protein](https://enduro-bites.myshopify.com/products/recovery-protein-by-enduro-bites)
+  * 2 scoops Enduro Bites Vanilla <a href="https://enduro-bites.myshopify.com/products/recovery-protein-by-enduro-bites" target="_blank" rel="noreferrer">Recovery Protein</a>
   * 1 ½ - 2 cups blackberries (fresh or frozen)
 
 ### Instructions:
