--- a/src/pages/posts/recipe-chocolate-pudding.mdx
+++ b/src/pages/posts/recipe-chocolate-pudding.mdx
@@ -21,7 +21,7 @@ This creamy, date-sweetened chocolate pudding will satisfy your sweet tooth whil
   * 1 ½ cups milk of choice (soy, almond, coconut, cashew)
   * ¼ cup chia seeds
   * 6-10 pitted dates (depending on desired sweetness)
-  * 2 scoop Enduro Bites Vanilla [Recovery Protein](https://enduro-bites.myshopify.com/products/recovery-protein-by-enduro-bites)  
+  * 2 scoop Enduro Bites Vanilla <a href="https://enduro-bites.myshopify.com/products/recovery-protein-by-enduro-bites" target="_blank" rel="noreferrer">Recovery Protein</a> 
   * 3 Tbsp unsweetened cocoa or cacao powder
   * 1 tsp vanilla
 
