--- a/src/pages/posts/recipe-pumpkin-buckwheat-gingerbread.mdx
+++ b/src/pages/posts/recipe-pumpkin-buckwheat-gingerbread.mdx
@@ -26,7 +26,7 @@ type: recipe
 * ½ teaspoon sea salt
 * 1 ½ teaspoon baking soda
 * 1 ½ teaspoon baking powder
-* 2 scoops Enduro Bites Vanilla [Recovery Protein](https://enduro-bites.myshopify.com/products/recovery-protein-by-enduro-bites)
+* 2 scoops Enduro Bites Vanilla <a href="https://enduro-bites.myshopify.com/products/recovery-protein-by-enduro-bites" target="_blank" rel="noreferrer">Recovery Protein</a>
 
 ### Instructions 
 * Preheat oven to 350 degrees and grease a 9in round baking pan
