--- a/src/pages/posts/recipe-lemon-zucchini-muffins.mdx
+++ b/src/pages/posts/recipe-lemon-zucchini-muffins.mdx
@@ -50,7 +50,7 @@ Many of my summer adventures in the mountains start well before dawn and end wel
   * 1 tsp sea salt
   * 2 tsp baking powder
   * ½ tsp baking soda
-  * 2 scoops Enduro Bites Vanilla [Recovery Protein](https://enduro-bites.myshopify.com/products/recovery-protein-by-enduro-bites)
+  * 2 scoops Enduro Bites Vanilla <a href="https://enduro-bites.myshopify.com/products/recovery-protein-by-enduro-bites" target="_blank" rel="noreferrer">Recovery Protein</a>
 
 ### Instructions:
 
