Add class to provide styling

--- a/src/pages/posts/media-cosmic-debris.mdx
+++ b/src/pages/posts/media-cosmic-debris.mdx
@@ -17,7 +17,7 @@ type: media
 An introduction to Amity Warme, a glimpse into van life, Yosemite climbing, and footage of Amity on the classic Cosmic Debris (5.13b).
 Filmed by Max Buschini and Samuel Crossley, then edited and produced by Max, with support from SCARPA.
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/3gaMAFHsuoY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe class="youtube-embed" width="560" height="315" src="https://www.youtube.com/embed/3gaMAFHsuoY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 Amity's recap post (she had sent Cosmic Debris in spring 2022):
 
