Give credit and add captions

--- a/src/pages/posts/media-gripped-stingray.mdx
+++ b/src/pages/posts/media-gripped-stingray.mdx
@@ -7,6 +7,8 @@ author: null
 image: 
   index: 16
   alt: Amity on Stingray
+  caption: Amity sending Stingray
+  cred: Connor Brown
 origin: 
   name: 'Gripped'
   url: "https://gripped.com/video/amity-warme-climbs-hard-finger-crack-in-joshua-tree/"
