--- a/src/pages/posts/media-gripped-tainted.mdx
+++ b/src/pages/posts/media-gripped-tainted.mdx
@@ -7,6 +7,8 @@ author: null
 image: 
   index: 17
   alt: Amity on Tainted Love
+  caption: Amity smearing her way up Tainted Love
+  cred: Rachel Ross
 origin: 
   name: 'Gripped'
   url: "https://gripped.com/news/amity-warme-climbs-squamish-5-13dr-trad/"
