--- a/src/pages/posts/media-youtube-stingray.mdx
+++ b/src/pages/posts/media-youtube-stingray.mdx
@@ -7,6 +7,8 @@ author: null
 image: 
   index: 16
   alt: Amity on Stingray
+  caption: Amity sending Stingray
+  cred: Connor Brown
 origin: 
   name: 'C.A.M.P.'
   url: "https://www.youtube.com/watch?v=g5vGAzcDkOQ"
