Fix typo and photos

--- a/src/pages/posts/media-gripped-tainted.mdx
+++ b/src/pages/posts/media-gripped-tainted.mdx
@@ -2,10 +2,10 @@
 layout: ../../layouts/MdPostLayout.astro
 title: 'Amity Warme Climbs Squamish 5.13dR Trad'
 pubDate: 2023-10-02
-description: "Amity sends Tainted Love, on of the Chief's most difficult pitches..."
+description: "Amity sends Tainted Love, one of the Chief's most difficult pitches..."
 author: null
 image: 
-  index: 17
+  index: 16
   alt: Amity on Tainted Love
   caption: Amity smearing her way up Tainted Love
   cred: Rachel Ross
