Add class for styling youtube embed

--- a/src/pages/posts/media-youtube-southernlights.mdx
+++ b/src/pages/posts/media-youtube-southernlights.mdx
@@ -22,4 +22,4 @@ It was a beautiful day! Only some short-lived wet sections, thankfully, despite 
 
 Check it out!
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/TtFdMoYCAgM?si=5IJ-VnVp7Zkuixlf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe class="youtube-embed" width="560" height="315" src="https://www.youtube.com/embed/TtFdMoYCAgM?si=5IJ-VnVp7Zkuixlf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
