--- a/src/pages/posts/media-youtube-stingray.mdx
+++ b/src/pages/posts/media-youtube-stingray.mdx
@@ -20,4 +20,4 @@ This past winter, C.A.M.P. athlete Amity Warme spent the season in Joshua Tree N
 
 Check it out!
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/RnenSqT0dFI?si=TCTp8eoaaMlENJi3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe class="youtube-embed" width="560" height="315" src="https://www.youtube.com/embed/RnenSqT0dFI?si=TCTp8eoaaMlENJi3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
