--- a/src/pages/posts/media-youtube-xue-way.mdx
+++ b/src/pages/posts/media-youtube-xue-way.mdx
@@ -16,4 +16,4 @@ type: media
 ---
 Check it out!
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/IZPc-ODv5s0?si=Ptzfi4gzqmkyaFf0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe class="youtube-embed" width="560" height="315" src="https://www.youtube.com/embed/IZPc-ODv5s0?si=Ptzfi4gzqmkyaFf0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
