Delineate news and video media content

--- a/src/pages/posts/media-climbing-feature.mdx
+++ b/src/pages/posts/media-climbing-feature.mdx
@@ -14,7 +14,7 @@ origin:
   url: "https://www.climbing.com/people/amity-warme-profile/"
   date: 2022-08-30
 tags: ["climbing", "Yosemite", "FRIAD", "El Capitan", "news", "media"]
-type: media
+type: news
 ---
 "On a chilly spring evening in early April, Amity Warme and Brent Barghahn scrambled onto the summit of El Capitan, exhausted and overjoyed. They had just topped out Freerider (VI 5.13a; 32 pitches) in a truly enviable style: In a little over 18 hours, without support, rap rehearsal, or stashed gear, they both free climbed the route, making Warme only the fifth woman to free the Big Stone in a day, and likely the first to do so in this self-reliant style. 
 
