--- a/src/pages/posts/media-climbing-recap.mdx
+++ b/src/pages/posts/media-climbing-recap.mdx
@@ -14,7 +14,7 @@ origin:
   url: "https://www.climbing.com/news/first-new-route-el-cap-two-years-fast-ascent-golden-gate/"
   date: 2021-06-07
 tags: ["climbing", "Yosemite", "Golden Gate", "El Capitan", "news", "media"]
-type: media
+type: news
 ---
 "...In the other newsworthy ascent, over May 24 and 29 and climbing from the ground without pre-inspection or pre-stashing of haul bags, Warme and Karow freed the 36-pitch 5.13a Golden Gate. They didn’t know which key placements had to go where, and they had to figure everything out on the fly.
 
