--- a/src/pages/posts/media-cosmic-debris.mdx
+++ b/src/pages/posts/media-cosmic-debris.mdx
@@ -12,7 +12,7 @@ origin:
   url: "https://us.scarpa.com/"
   date: 2021-06-03
 tags: ["climbing", "Yosemite", "Cosmic Debris", "SCARPA", "video", "media"]
-type: media
+type: video
 ---
 An introduction to Amity Warme, a glimpse into van life, Yosemite climbing, and footage of Amity on the classic Cosmic Debris (5.13b).
 Filmed by Max Buschini and Samuel Crossley, then edited and produced by Max, with support from SCARPA.
