--- a/src/pages/posts/media-daily-honeymoon.mdx
+++ b/src/pages/posts/media-daily-honeymoon.mdx
@@ -12,7 +12,7 @@ origin:
   url: "https://www.dailycamera.com/2022/09/28/girl-crew-storms-the-honeymoon-on-longs-peak/"
   date: 2022-09-28
 tags: ["climbing", "RMNP", "Honeymoon", "news", "media"]
-type: media
+type: news
 ---
 "Sometimes climbers and their achievements are so remarkable they make my job easy; they leave no doubt I will write about them. My last column about Madaleine Sorkin climbing the world’s hardest high-altitude free route, was one of these.
 
