--- a/src/pages/posts/media-gripped-golden.mdx
+++ b/src/pages/posts/media-gripped-golden.mdx
@@ -14,7 +14,7 @@ origin:
   url: "https://gripped.com/news/amity-warme-sends-golden-gate-5-13b-on-el-capitan/"
   date: 2021-06-02
 tags: ["climbing", "Yosemite", "El Capitan", "news", "media"]
-type: media
+type: news
 ---
 "Amity Warme has become the fourth woman to free Golden Gate, the 36-pitch 5.13b on El Capitan, after five-and-a-half days on the wall. Canadian Bronwyn Hodgins sent it earlier this season, and it had been freed by Hazel Findlay and Emily Harrington in the past."
 
