--- a/src/pages/posts/media-gripped-stingray.mdx
+++ b/src/pages/posts/media-gripped-stingray.mdx
@@ -14,7 +14,7 @@ origin:
   url: "https://gripped.com/video/amity-warme-climbs-hard-finger-crack-in-joshua-tree/"
   date: 2023-10-02
 tags: ["climbing", "Joshua Tree", "Stringray", "trad", "news", "media"]
-type: media
+type: news
 ---
 "In early February, pro climber and dietician Amity Warme sent the Joshua Tree test piece, Stingray 5.13d. Located in the Wall Street Mill Area of Wonderland South, the route is a splitter overhanging finger crack with painful jams and lousy feet. Mike Paul first freed Stingray on top-rope back in 1988. Shortly afterwards, Hidetaka Suzuki became the first person to successfully lead the route."
 
