--- a/src/pages/posts/media-youtube-golden.mdx
+++ b/src/pages/posts/media-youtube-golden.mdx
@@ -12,7 +12,7 @@ origin:
   url: "https://www.youtube.com/watch?v=g5vGAzcDkOQ"
   date: 2021-06-03
 tags: ["climbing", "Yosemite", "Golden Gate", "El Capitan", "video", "media"]
-type: media
+type: video
 ---
 Check it out!
 
