--- a/src/pages/posts/media-youtube-southernlights.mdx
+++ b/src/pages/posts/media-youtube-southernlights.mdx
@@ -12,7 +12,7 @@ origin:
   url: "https://www.youtube.com/watch?v=TtFdMoYCAgM"
   date: 2023-10-02
 tags: ["climbing", "Squamish", "The Southern Lights", "trad", "video", "media"]
-type: media
+type: video
 ---
 Connor and I went on a little end of the season adventure up (most of) the Chief, climbing The Alaska Highway (5.11d, 5 pitches) into The Calling (5.12a, 3 pitches). We chose to rap after the high quality pitches on The Calling, but you can continue to quest up to the top. 
 
