--- a/src/pages/posts/media-youtube-stingray.mdx
+++ b/src/pages/posts/media-youtube-stingray.mdx
@@ -14,7 +14,7 @@ origin:
   url: "https://www.youtube.com/watch?v=g5vGAzcDkOQ"
   date: 2023-09-22
 tags: ["climbing", "Joshua Tree", "Stingray", "trad", "video", "media"]
-type: media
+type: video
 ---
 This past winter, C.A.M.P. athlete Amity Warme spent the season in Joshua Tree National Park, California. Among other classic lines, she worked and sent “Stingray” a striking 5.13d trad line, and one of the Park’s hardest pure gear routes. Jeremy Schoenborn captured the process of Amity projecting and sending the route in an exciting short video that C.A.M.P. is proud and happy to release. Enjoy this theatrical treat that showcases this incredible climb and touches on Amity’s mindset around trying the route!
 
