--- a/src/pages/posts/media-youtube-xue-way.mdx
+++ b/src/pages/posts/media-youtube-xue-way.mdx
@@ -12,7 +12,7 @@ origin:
   url: "https://www.youtube.com/watch?v=IZPc-ODv5s0"
   date: 2023-09-19
 tags: ["climbing", "Yosemite", "Xue Way", "Half Dome", "video", "media"]
-type: media
+type: video
 ---
 Check it out!
 
