Add video to content, update stem corner tag

--- a/src/pages/posts/media-gripped-tainted.mdx
+++ b/src/pages/posts/media-gripped-tainted.mdx
@@ -13,7 +13,7 @@ origin:
   name: 'Gripped'
   url: "https://gripped.com/news/amity-warme-climbs-squamish-5-13dr-trad/"
   date: 2023-08-23
-tags: ["climbing", "Squamish", "Tainted Love", "trad", "news", "media"]
+tags: ["climbing", "Squamish", "Tainted Love", "stem corner", "trad", "news", "media"]
 type: news
 ---
 "Veteran trad climber Amity Warme has been spending some time in Squamish, where she’s repeated one of The Chief’s most difficult pitches: Tainted Love 5.13dR trad. Tainted Love was first climbed by Hazel Findlay, and has been repeated by climbers like Connor Herson, Sonnie Trotter, Katha Saurwein, Jorg Verhoeven, Sean Villanueva O’Driscoll and others."
