--- a/src/pages/posts/media-gripped-book.mdx
+++ b/src/pages/posts/media-gripped-book.mdx
@@ -13,7 +13,7 @@ origin:
   name: 'Gripped'
   url: "https://gripped.com/news/amity-warme-ticks-yosemites-book-of-hate-capping-off-a-stellar-climbing-season/"
   date: 2023-11-29
-tags: ["climbing", "Yosemite", "Book of Hate", "El Capitan", "news", "media"]
+tags: ["climbing", "Yosemite", "Book of Hate", "stem corner", "El Capitan", "news", "media"]
 type: news
 ---
 "On Nov. 22, merely a week after freeing her fourth El Cap route – El Niño 5.13c — Amity Warme ticked the 45-metre 5.13d Book of Hate in Yosemite’s Elephant’s Graveyard."
